[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Actors/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/World/BGBG.png" type="Texture" id=2]
[ext_resource path="res://Assets/World/BG.png" type="Texture" id=3]
[ext_resource path="res://Assets/World/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://Assets/Actors/Enemy1/Enemy1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/UI/HealthBar/barOver.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/HealthBar/barProg.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/HealthBar/barUnder.png" type="Texture" id=8]
[ext_resource path="res://Assets/World/Healthbar.gd" type="Script" id=9]
[ext_resource path="res://Assets/World/Spawnner.gd" type="Script" id=10]
[ext_resource path="res://Assets/Font/Minecraft.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/World/PauseMenu.gd" type="Script" id=12]
[ext_resource path="res://Assets/World/PauseQuit.gd" type="Script" id=13]
[ext_resource path="res://Assets/Actors/Enemy1/Minecraft.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Assets/Music/Double_the_Bits.ogg" type="AudioStream" id=15]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 1.69
glow_strength = 0.7
glow_bloom = 0.36
glow_blend_mode = 0
glow_hdr_threshold = 0.33

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 91, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 42 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 51 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 14 )

[node name="World" type="Node2D"]
position = Vector2( 0, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Entities" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="Entities" instance=ExtResource( 1 )]
position = Vector2( 26, 49 )
moveSpeed = 3000

[node name="Enemy1" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( 117, 11 )

[node name="Enemy2" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( 160, 31 )

[node name="Enemy3" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( 128, 70 )

[node name="Bullets" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )
speed = 65

[node name="SpriteBG" type="Sprite" parent="ParallaxBackground"]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 160, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Colliders" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Colliders"]
__meta__ = {
"_edit_lock_": true
}

[node name="Y" type="CollisionShape2D" parent="Colliders/StaticBody2D"]
position = Vector2( 80, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Y2" type="CollisionShape2D" parent="Colliders/StaticBody2D"]
position = Vector2( 80, 94 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawnner" type="StaticBody2D" parent="Colliders"]
position = Vector2( 0, 43 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Spawnner"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Colliders/Spawnner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Spawnner/Area2D"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Colliders/Spawnner"]
autostart = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Healthbar" type="TextureProgress" parent="UI"]
margin_left = 6.0
margin_top = 5.0
margin_right = 46.0
margin_bottom = 45.0
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="score" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UI/score"]
margin_left = 136.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 5 )
text = "&&"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 80, 47 )
current = true
smoothing_enabled = true

[node name="Particles" type="Node2D" parent="."]

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" type="Control" parent="PauseLayer"]
pause_mode = 2
visible = false
margin_top = -2.0
margin_right = 40.0
margin_bottom = 38.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseLayer/PauseMenu"]
margin_left = 26.0
margin_top = 9.0
margin_right = 140.0
margin_bottom = 84.0
color = Color( 1, 1, 1, 0.282353 )

[node name="Label" type="Label" parent="PauseLayer/PauseMenu"]
margin_left = 55.0
margin_top = 13.0
margin_right = 111.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
text = "Paused"

[node name="PauseQuit" type="Button" parent="PauseLayer/PauseMenu"]
margin_left = 57.0
margin_top = 44.0
margin_right = 107.0
margin_bottom = 66.0
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "quit"
flat = true
script = ExtResource( 13 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -8.0
autoplay = true
[connection signal="body_entered" from="Colliders/Spawnner/Area2D" to="Colliders/Spawnner" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Colliders/Spawnner/Timer" to="Colliders/Spawnner" method="_on_Timer_timeout"]
[connection signal="pressed" from="PauseLayer/PauseMenu/PauseQuit" to="PauseLayer/PauseMenu/PauseQuit" method="_on_PauseQuit_pressed"]
